@@ -1,5 +1,11 @@
 2005-07-07  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/schroot.c
+	(entries): Make entries const, to fix compiliation with gcc-4.0.
+	(parse_options): Check for parse errors, and exit on error.
+
+2005-07-07  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/sbuild-error.c, schroot/sbuild-error.h: Wrap GError as a
 	GType (SBUILD_TYPE_ERROR and SBUILD_TYPE_ERROR_POINTER) for use
 	with signals (GError * may be used as an "out" argument).
